Adiciona funcionalidade de envio de email para recuperação de senha e implementa resposta padronizada